[package]
name = "trs_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trs_24 = { path = "../" }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "test"
path = "src/main.rs"

[profile.dev]
opt-level = 1
strip = true
